examples/bad/1.emm
int main() {
  bool x = 2 + 2;
  return 0;
}
